wee.yml
# ------------------ StatefulSet 1 ------------------
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: data-prep
spec:
  serviceName: "data-prep"
  replicas: 1
  selector:
    matchLabels:
      app: shared
  template:
    metadata:
      labels:
        app: shared
    spec:
      containers:
      - name: data-prep-container
        image: alaxcia/egt309dataprep:v1.3
        ports:
        - containerPort: 6650

---
# ------------------ StatefulSet 2 ------------------
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: model-train
spec:
  serviceName: "model-train"
  replicas: 1
  selector:
    matchLabels:
      app: shared
  template:
    metadata:
      labels:
        app: shared
    spec:
      containers:
      - name: model-train-container
        image: alaxcia/egt309modeltrain:v1.6
        ports:
        - containerPort: 6651
        volumeMounts:
        - mountPath: "/data"
          name: shared-storage
      volumes:
      - name: shared-storage
        persistentVolumeClaim:
          claimName: my-pvc

---
# ------------------ StatefulSet 3 ------------------
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: model-pred
spec:
  serviceName: "model-pred"
  replicas: 1
  selector:
    matchLabels:
      app: shared
  template:
    metadata:
      labels:
        app: shared
    spec:
      containers:
      - name: model-pred-container
        image: alaxcia/egt309modelpred:v1.6
        ports:
        - containerPort: 6652
        volumeMounts:
        - mountPath: "/data"
          name: shared-storage
      volumes:
      - name: shared-storage
        persistentVolumeClaim:
          claimName: my-pvc

---
# ------------------ StatefulSet 4 ------------------
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gui
spec:
  serviceName: "gui"
  replicas: 1
  selector:
    matchLabels:
      app: share
  template:
    metadata:
      labels:
        app: share
    spec:
      containers:
      - name: gui-container
        image: alaxcia/egt309backupgui:v1.12   #testrun:v1.6
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/data"
          name: shared-storage
      volumes:
      - name: shared-storage
        persistentVolumeClaim:
          claimName: my-pvc


---
# ------------------ Multi-Port Service ------------------
apiVersion: v1
kind: Service
metadata:
  name: multi-app-service
spec:
  clusterIP: None  # Headless service
  selector:
    app: shared
  ports:
    - name: data-prep
      port: 6650
      targetPort: 6650
    - name: model-train
      port: 6651
      targetPort: 6651
    - name: model-pred
      port: 6652
      targetPort: 6652
  # Change to NodePort or LoadBalancer if needed
# ------------------ GUI Service ------------------
apiVersion: v1
kind: Service
metadata:
  name: gui-service
spec:
  selector:
    app: share
  ports:
    - name: gui
      port: 80
      targetPort: 8080
  # Change to NodePort or LoadBalancer if needed
